# Push_Swap

./: 1_test_all_num_up_to_5_args.sh  CMakeLists.txt  Makefile  README.md  a.out  ft_add_back.c  ft_check_if_sorted.c  ft_check_index.c  ft_check_repeat.c  ft_check_sort.c  ft_count_arg.c  ft_count_stack.c  ft_element_new.c  ft_empty_b.c  ft_error.c  ft_free_list.c  ft_free_node.c  ft_get_arguements.c  ft_get_pivot_element.c  ft_index.c  ft_last.c  ft_pa.c  ft_pb.c  ft_print_list.c  ft_ps_atoi.c  ft_push.c  ft_push_b.c  ft_push_front.c  ft_quicksort_a.c  ft_quicksort_b.c  ft_ra.c  ft_rb.c  ft_return.c  ft_rra.c  ft_rrb.c  ft_rrr.c  ft_sa.c  ft_sb.c  ft_second_last.c  ft_sort.c  (+11 more)
a.out.dSYM/Contents/Resources/DWARF/: a.out
ft_printfnew/: Makefile  ft_flagcheck.c  ft_numlen_base.c  ft_printf.c  ft_printf.h  ft_putchar.c  ft_puthex.c  ft_putnbr_base.c  ft_putpointer.c  ft_putstr.c
ft_printfnew/libft/: Makefile  ft_atoi.c  ft_split.c  ft_substr.c  libft.h
